Modified MANIFEST.in and setup.py to (1) include test data files and (2) define requirements that can be installed via easy_install

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include AUTHORS
 include README
 
 recursive-include experiments/templates *.html *.js
+recursive-include experiments/tests/data *.json
